<resources>
    <string name="app_name">떠리원</string>
    <string name="nickname">닉네임</string>
    <string name="goodPoint">따봉</string>
    <string name="share_list">공유글 목록</string>
    <string name="share_complete_list">공유완료 목록</string>
    <string name="save_list">저장글 목록</string>
    <string name="review_list">후기 목록</string>
    <string name="my_info_setting">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="unregister">회원탈퇴</string>
    <string name="divide_line">|</string>
    <string name="no_introduction">소개글이 없습니다.</string>
    <string name="change_profile">프로필 변경</string>
    <string name="get_nickname">닉네임을 입력해주세요</string>
    <string name="message_same">중복입니다!!</string>
    <string name="introduction">소개</string>
    <string name="get_introduction">소개글을 입력해주세요</string>
    <string name="save">저장</string>
    <string name="image_count">%d/%d</string>
    <string name="buy_date">%d.%d.%d</string>
    <string name="next">다음</string>
    <string name="buy_date_local">%d-%02d-%02dT15:53:16</string>
    <string name="walking_time">%dm 도보 %d분</string>
    <string name="buy_price">%s원</string>
    <string name="on_sell_count">판매 중 %d</string>
    <string name="sold_out_product_count">판매 완료 %d</string>
    <string name="review_count">후기 %d</string>
    <string name="nickname_input">%s 채팅</string>

    <string name="product_count">%d개</string>
    <string name="default_notification_channel_id">sharingapp_notification_channel_id</string>
    <string name="channel_name">채팅 알림</string>
    <string name="channel_description">채팅 알림입니다.</string>
    <string name="google_login_web_client_id">408821974772-v8qf26j0dubv3lu6jns6mhdputubm9e7.apps.googleusercontent.com</string>
</resources>