<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/bottom_round"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/userMenuLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/menu_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/usernameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/user_round"
            android:elevation="50dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/userImageView"
            app:layout_constraintTop_toTopOf="@id/userImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/main_font"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/nickname"
                android:textColor="@color/app_main"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nicknameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/main_font"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Riny" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodCountLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/user_round"
            android:elevation="50dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/usernameLayout"
            app:layout_constraintTop_toTopOf="@id/userImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/main_font"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/goodPoint"
                android:textColor="@color/app_main"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goodCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/main_font"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="0" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/no_introduction"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/goodCountLayout"
            app:layout_constraintStart_toStartOf="@+id/userImageView"
            app:layout_constraintTop_toBottomOf="@+id/userImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 수평 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userMenuLayout"
        android:layout_width="353dp"
        android:layout_height="313dp"
        android:background="@drawable/user_menu_round"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/myShareListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/main_font"
                    android:text="@string/share_list"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/main_font"
                    android:text="@string/share_complete_list"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/saveProductListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/saveListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="28dp"
                    android:fontFamily="@font/main_font"
                    android:text="@string/save_list"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userSettingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/main_font"
                    android:text="@string/my_info_setting"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/userMenuLayout"
        app:layout_constraintStart_toStartOf="@id/userMenuLayout"
        app:layout_constraintTop_toBottomOf="@id/userMenuLayout">

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:text="@string/logout"
            android:textColor="@drawable/color_click_nickname"
            android:textSize="13sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_line"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/unregister"
            android:textSize="13sp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>